--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,9 @@
   width: 100vw;
   height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
+  flex: 30%;
+  background-color: rgb(30, 30, 30);
+  justify-content: center;
 }
 
 body {
