--- a/src/components/Header/TodoTask.module.scss
+++ b/src/components/Header/TodoTask.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   color: white;
   margin: 15px;
+
 }
 
 .task .content {
@@ -12,17 +13,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
 
 .task .content span {
   display: grid;
   place-items: center;
-  border: 1px solid white;
   width: 100%;
   height: 100%;
   font-size: 18px;
-  border-right: none;
   background-color: tomato;
+  border-radius:10px;
+  margin-right: 10px;
 }
 
 .task button {
@@ -30,8 +32,7 @@
   height: 100%;
   border: none;
   background-color: lightseagreen;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
   color: white;
   cursor: pointer;
+  border-radius:10px;
 }
